--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.5.1",
 		"publint": "^0.3.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
 		"vite": "^5.4.11"
 	}
