--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "navigation-hover",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && npm run prepack",
@@ -42,5 +43,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.0.0",
     "vite": "^5.4.11"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.0"
   }
 }
