--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "publint": "^0.3.2",
     "svelte": "^5.19.0",
     "svelte-check": "^4.0.0",
+    "svelte-preprocess": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.0.0",
     "vite": "^5.4.11"
